# cookiecutter-fastapi-docker

./: LICENSE  README.md  cookiecutter.json  setup.py
{{cookiecutter.project_slug}}/: .gitignore  README.md  docker-compose.yml
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/backend/: Dockerfile  alembic.ini  example.env  pyproject.toml
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/backend/src/: main.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/backend/src/api/rest/v0/: routes.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/backend/src/api/rest/v1/: routes.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/backend/src/config/: __init__.py  config.py  environment.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/backend/src/infra/application/: exception.py  factory.py  pre_flight_check.py  response.py  result.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/backend/src/infra/application/setup/: cors.py  logging.py  sentry.py  sqlalchemy_scoped_session.py  tracing.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/backend/src/infra/database/: declarative_base.py  models.py  repository.py  session.py  transactional.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/backend/src/infra/database/migrations/: env.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/backend/src/service/auth/: dependency.py  dto.py  exception.py  service.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/backend/src/service/health_check/: dto.py  service.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/backend/src/service/user/: dto.py  exception.py  repository.py  service.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/backend/tests/: base.py  base_test_case.py  conftest.py  test_api_health.py  test_asyncio.py  test_migration_stairway.py
(+14 files in other folders)
